[project]
name = "prozect"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.3.0",
    "dash-bootstrap-components>=2.0.4",
    "google-genai>=2.10.0",
    "gunicorn>=26.0.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
